# ram-optimizer-for-windows

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  idea.yml
.github/workflows/: ci.yml
docs/: index.html
scripts/: install-unix.sh  install-windows.ps1  run-hidden.vbs  uninstall-windows.ps1
src/: actions.rs  ai.rs  alert.rs  collect.rs  config.rs  critical.rs  detect.rs  guard.rs  main.rs  optimize.rs  pass.rs  rules.rs  runlog.rs  scheduler.rs  single.rs  state.rs  tray.rs  ui.rs  util.rs  vectordb.rs  windefend.rs
